[package]
name = "rlout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.31.0"
glutin-winit = "0.4.2"
skia-safe = { version = "0.67.0", features = ["gl", "svg", "textlayout"] }
winit = "0.29.2"
raw-window-handle = { version = "0.5.0" }
gl-rs = { package = "gl", version = "0.14.0" }
